Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomato
  labels:
    app: zomato
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zomato
  template:
    metadata:
      labels:
        app: zomato
    spec:
      containers:
      - name: zomato
        image: sampathkarra/zomato-app:v1.0.48
        ports:
        - containerPort: 3000
