Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomato
  labels:
    app: zomato
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: zomato
