Kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zomato-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /zomato
        pathType: Prefix
        backend:
          service:
            name: zomato
            port:
              number: 3000

      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80

      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80

      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-kube-pr-prometheus
            port:
              number: 9090
